RESOLVED FIXED 143907
[GTK] Miscellaneous changes for msys/mingw
https://bugs.webkit.org/show_bug.cgi?id=143907
Summary [GTK] Miscellaneous changes for msys/mingw
Milan Crha
Reported 2015-04-17 16:51:53 PDT
These are the last miscellaneous changes for webkit-2.4 branch at revision 182543 I use to be able to build it in msys/mingw.
Attachments
proposed wk patch (3.07 KB, patch)
2015-04-17 16:54 PDT, Milan Crha
cgarcia: review+
cgarcia: commit-queue-
Milan Crha
Comment 1 2015-04-17 16:54:09 PDT
Created attachment 251073 [details] proposed wk patch
Carlos Garcia Campos
Comment 2 2015-05-19 00:31:10 PDT
Comment on attachment 251073 [details] proposed wk patch View in context: https://bugs.webkit.org/attachment.cgi?id=251073&action=review > Source/WTF/wtf/Platform.h:-615 > -#include <WTF/WTFHeaderDetection.h> > - What's wrong with this? I think I've already merged the other changes as part of other commits
Milan Crha
Comment 3 2015-05-19 00:42:21 PDT
The #include <WTF/WTFHeaderDetection.h> file doesn't exists with mingw/msys builds.
Carlos Garcia Campos
Comment 4 2015-05-19 00:57:52 PDT
Comment on attachment 251073 [details] proposed wk patch View in context: https://bugs.webkit.org/attachment.cgi?id=251073&action=review I'll merge only the autogenerated header part. >> Source/WTF/wtf/Platform.h:-615 >> -#include <WTF/WTFHeaderDetection.h> >> - > > What's wrong with this? I think I've already merged the other changes as part of other commits Ok, this is an autogenerated header, that we don't generate, so this is valid for 2.4 branch.
Carlos Garcia Campos
Comment 5 2015-05-19 01:00:45 PDT
Note You need to log in before you can comment on or make changes to this bug.