[GTK] Miscellaneous changes for msys/mingw https://bugs.webkit.org/show_bug.cgi?id=143907

Patch by Milan Crha <mcrha@redhat.com> on 2015-04-17
Reviewed by Carlos Garcia Campos.

* wtf/Platform.h: Remove autogenerated header not needed by GTK
port.